Added required binaries and environment vars to they-are-billions.yaml

--- a/they-are-billions-steam.yaml
+++ b/they-are-billions-steam.yaml
@@ -10,6 +10,10 @@ script:
     appid: 644930
     arch: win32
     prefix: $GAMEDIR/prefix
+  require-binaries: xterm, wine
+  system:
+    env:
+      TERM: xterm
   installer:
   - task:
       name: create_prefix
