--- a/they-are-billions-steam.yaml
+++ b/they-are-billions-steam.yaml
@@ -9,23 +9,14 @@ script:
   game:
     appid: 644930
     arch: win32
-    prefix: $GAMEDIR/prefix
-  require-binaries: xterm, wine
-  system:
-    env:
-      TERM: xterm
+  require-binaries: wine, xterm
   installer:
-  - task:
-      name: create_prefix
-      arch: win32
-      prefix: $GAMEDIR/prefix
   - task:
       name: winetricks
       description: Installing .Net 4.6.x (Required by the game)
       app: dotnet462
       silent: false
       arch: win32
-      prefix: $GAMEDIR/prefix
   winesteam:
     version: staging-3.14-x86_64
     quit_steam_on_exit: false
